# nanopy

./: ARCHITECTURE.md  EXAMPLE.md  README.md  TODO.md  config.example.json  pyproject.toml
app/: agent.py  cli.py  config.py  cron_runner.py  memory.py  provider.py  tools.py
nanopybot/: agent.py  cli.py  config.py  scheduler.py  selflearn.py  tools.py
